STYLE : fixed overflow of app

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@
   text-align: center;
   display: flex;
   font-family: Inter;
-  min-width: 100vw;
 }
 
 main {
